[metadata]
name = rss_reader
author = DiPal
description = Python script that reads RSS feed and displays it in various formats
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3

[options]
packages = find:
install_requires =
    html2text
    requests>=2.27
python_requires = >=3.9, <3.10

[options.packages.find]
where=rss_reader

[options.entry_points]
console_scripts = 
    rss_reader = rss_reader.rss_reader:main
